[tool.poetry]
name = "training-search"
version = "0.1.0"
description = ""
authors = ["김은미 <eunmi.kim@toss.im>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
sentence-transformers = "^2.2.2"
#torch = {url = "https://files.pythonhosted.org/packages/79/b3/eaea3fc35d0466b9dae1e3f9db08467939347b3aaa53c0fd81953032db33/torch-1.13.0-cp310-none-macosx_11_0_arm64.whl"}
torch = "^1.12.1"
numpyencoder = "^0.3.0"
pandas = "^1.4.3"
numpy = "^1.23.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
